Fix tags list overflow

--- a/github-tags-client/src/containers/Tags/Tags.module.scss
+++ b/github-tags-client/src/containers/Tags/Tags.module.scss
@@ -19,6 +19,7 @@
   width: 100%;
   height: 50vh;
   margin-top: 5px;
+  overflow-y: auto;
 }
 
 .Tag {
